// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders checked correctly 1`] = `
<div
  className="ms-Checkbox is-checked is-enabled"
>
  <input
    aria-checked="true"
    aria-label="Standard checkbox"
    checked={true}
    data-ktp-execute-target={true}
    id="checkbox-0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="ms-Checkbox-label"
    htmlFor="checkbox-0"
  >
    <div
      className="ms-Checkbox-checkbox"
      data-ktp-target={true}
    >
      <span
        aria-hidden={true}
        className="ms-Checkbox-checkmark"
        role="presentation"
        style={Object {}}
      >
        <svg
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
          />
        </svg>
      </span>
    </div>
    <span
      aria-hidden="true"
      className="ms-Checkbox-text"
    >
      Standard checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox renders indeterminate correctly 1`] = `
<div
  className="ms-Checkbox is-enabled"
>
  <input
    aria-checked="mixed"
    aria-label="Standard checkbox"
    checked={false}
    data-ktp-execute-target={true}
    id="checkbox-0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="ms-Checkbox-label"
    htmlFor="checkbox-0"
  >
    <div
      className="ms-Checkbox-checkbox"
      data-ktp-target={true}
    >
      <span
        aria-hidden={true}
        className="ms-Checkbox-checkmark"
        role="presentation"
        style={Object {}}
      >
        <svg
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
          />
        </svg>
      </span>
    </div>
    <span
      aria-hidden="true"
      className="ms-Checkbox-text"
    >
      Standard checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox renders unchecked correctly 1`] = `
<div
  className="ms-Checkbox is-enabled"
>
  <input
    aria-checked="false"
    aria-label="Standard checkbox"
    checked={false}
    data-ktp-execute-target={true}
    id="checkbox-0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="ms-Checkbox-label"
    htmlFor="checkbox-0"
  >
    <div
      className="ms-Checkbox-checkbox"
      data-ktp-target={true}
    >
      <span
        aria-hidden={true}
        className="ms-Checkbox-checkmark"
        role="presentation"
        style={Object {}}
      >
        <svg
          viewBox="0 0 2048 2048"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
          />
        </svg>
      </span>
    </div>
    <span
      aria-hidden="true"
      className="ms-Checkbox-text"
    >
      Standard checkbox
    </span>
  </label>
</div>
`;
